webrtcbin: nicesink should disable drop_out_of_segment
My webrtcbin pipeline wasn't sending data to my peer. I took me a while to figure out it was because of:
0:02:07.294114779 475677 0x7f6a5c057860 DEBUG basesink gstbasesink.c:4009:gst_base_sink_chain_unlocked:<nicesink1> dropping buffer, out of clipping segment
I discussed this @slomo who suggested that webrtcbin
should likely call gst_base_sink_set_drop_out_of_segment(FALSE)
on nicesink
.