gstnicesink: disable drop out of segment on nicesink

It's very tricky and unintuitive to have webrtcbin not sending data
because of the segment.

Fix https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/907